--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "activationCommands": {
     "atom-workspace": "language-aliasworlds-ini:toggle"
   },
-  "repository": "https://github.com/snowydad/language-aliasworlds-ini.git",
+  "repository": "https://github.com/snowydad/language-aliasworlds-ini",
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
