--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "language-aliasworlds-ini",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "description": "Syntax support for Aliasworlds flavored INI files in Atom",
   "keywords": [
     "syntax",
@@ -8,7 +8,7 @@
     "ini",
     "aliasworlds"
   ],
-  "repository":{
+  "repository": {
     "type": "git",
     "url": "https://github.com/snowydad/language-aliasworlds-ini"
   },
@@ -19,6 +19,5 @@
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
   },
-  "dependencies": {
-  }
+  "dependencies": {}
 }
