Grammar update for links as values
Not finished

--- a/test.ini
+++ b/test.ini
@@ -1,5 +1,6 @@
 [Popup_Title]
 url = http://example.com
+url_2 = example.com
 string = "EXAMPLE.COM"
 position = 0, 100 // for desctop and tablet
 position(phone) = 0,70
