--- a/test.ini
+++ b/test.ini
@@ -1,7 +1,8 @@
 [Popup_Title]
-url = http://example.com
+url = http://example.com/sdf
 url_2 = example.com
-string = "EXAMPLE.COM"
 position = 0, 100 // for desctop and tablet
 position(phone) = 0,70
+string = "EXAMPLE.COM"
 icon = assets/icons/icon.png
+settings = assets/popups/example.ini
