--- a/test.ini
+++ b/test.ini
@@ -1,7 +1,7 @@
 [Popup_Title]
-url = http://example.com/sdf
+url = http://example.com/
 url_2 = example.com
-position = 0, 100 // for desctop and tablet
+position = 0, 100 // for desktop and tablet
 position(phone) = 0,70
 string = "EXAMPLE.COM"
 icon = assets/icons/icon.png
